--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -75,8 +75,8 @@ section {
 
 /* EFECTO HOVER 🔥 */
 .producto:hover {
-  transform: scale(1.05);
-  box-shadow: 0 8px 18px rgba(0, 0, 0, 0.15);
+  transform: none;
+  box-shadow: none;
 }
 
 /* IMAGEN */
@@ -183,6 +183,7 @@ input {
     padding: 14px;
   }
 }
+
 
 
 
